--- a/angular8-newsapp/src/app/news/news.component.html
+++ b/angular8-newsapp/src/app/news/news.component.html
@@ -1,13 +1,11 @@
-<p>
-  news works!
-</p>
+
 <h1>Check Out the news below</h1>
-<div *ngFor="let article of articles">
+<div *ngFor="let article of articles" class="container"> 
   <h2>{{article.title}}</h2>
   <h4>By {{article.author}}</h4>
   <div class="row">
     <div class="col-sm-6">
-      <p>{{article.description}}</p>
+      <p>{{article.description}} ...<a href="{{article.url}}">Read more</a></p>
     </div>
     <div class="col-sm-6">
         <img src="{{article.urlToImage}}">
